end of day save

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 
 <body>
-   
-  <section class="left">
+
+<section class="left">
 
     <div class="search-box">
       search
@@ -32,7 +32,7 @@
       <div class="contact-container">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Amy Adams</h3>
@@ -44,7 +44,7 @@
       <div class="contact-container">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_02.png" alt="" class="avatar">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Marc</h3>
@@ -56,7 +56,7 @@
       <div class="contact-container">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_03.png" alt="" class="avatar">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Jacob</h3>
@@ -68,7 +68,7 @@
       <div class="contact-container">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_04.png" alt="" class="avatar">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Chris Smith</h3>
@@ -80,7 +80,7 @@
       <div class="contact-container">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_05.png" alt="" class="avatar">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Mia Wong</h3>
@@ -92,7 +92,7 @@
       <div class="contact-container">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_06.png" alt="" class="avatar">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Jane</h3>
@@ -111,14 +111,14 @@
 
     <header class="header">
 
-      <div class="header-content">
+      <div class="header-content  flex-container flex-row">
         <div class="header__contact-name">
           <a href="#" class="contact-name">Amy Adams</a>
         </div>
         <div class="header__logo">
-          <img src="assets/logo_50.svg" alt="logo image" class="logo">
+          <a href="index.html" class="logo-link"><img src="assets/logo_50.svg" alt="logo image" class="logo-image"></a>
         </div>
-        <div class="header__student">
+        <div class="header__student flex-container flex-row">
           <div class="header__student__name">
             <a href="#" class="student-name">Student name</a>
           </div>
@@ -190,14 +190,5 @@
     </section>
 
   </section>
-
-  <footer class="footer">
-    <p class="footer__copyright">
-      © 2020 COPYRIGHT 
-      <span class="footer__brand-name">brand name</span>
-       / design by 
-       <span class="footer__student-name">student name</span>
-    </p>
-  </footer>
 </body>
 </html>
