--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
   <section class="right">
 
-    <header class="header">
+    <header class="header layout__item--full-width">
 
-      <div class="header-content  flex-container flex-row">
+      <div class="header__content layout__item--full-width flex-container flex-row">
         <div class="header__contact-name">
           <a href="#" class="contact-name">Amy Adams</a>
         </div>
@@ -124,7 +124,7 @@
           </div>
           <div class="header_student__avatar">
             <a href="#" class="">
-              <img src="assets/user_avatars/user_avatar_07.png" alt="student avatar" class="avatar">
+              <img src="assets/user_avatars/user_avatar_07.png" alt="student avatar" class="avatar avatar40">
             </a>
           </div>
         </div>
