--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
 
 <section class="left">
 
-    <div class="search-box">
-      search
+    <div class="search-box-wrapper">
+      <div class="search-box">
+        <form class="search-form">
+          <input type="text" id="search" name="search" class="search-input" placeholder="Search">
+          <button type="submit" class="search-submit"><i class="icon fas fa-search"></i></button>
+        </form>
+      </div>
     </div>
 
     <div class="contacts-list">
