--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
 
     <div class="contacts-list">
 
-      <div class="contact-container">
+      <div class="contact-container clearfix selected">
         <a href="#" class="contact">
-          <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar">
-          </div>
+            <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar avatar-left">
           <div class="contact__body">
             <h3 class="contact__name">Amy Adams</h3>
             <p class="contact__status">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</p>
@@ -46,10 +44,10 @@
         </a>
       </div>
 
-      <div class="contact-container">
+      <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_02.png" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_02.png" alt="" class="avatar avatar-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Marc</h3>
@@ -58,10 +56,10 @@
         </a>
       </div>
 
-      <div class="contact-container">
+      <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_03.png" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_03.png" alt="" class="avatar avatar-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Jacob</h3>
@@ -70,10 +68,10 @@
         </a>
       </div>
 
-      <div class="contact-container">
+      <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_04.png" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_04.png" alt="" class="avatar avatar-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Chris Smith</h3>
@@ -82,10 +80,10 @@
         </a>
       </div>
 
-      <div class="contact-container">
+      <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_05.png" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_05.png" alt="" class="avatar avatar-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Mia Wong</h3>
@@ -94,10 +92,10 @@
         </a>
       </div>
 
-      <div class="contact-container">
+      <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_06.png" alt="" class="avatar">
+            <img src="assets/user_avatars/user_avatar_06.png" alt="" class="avatar avatar-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Jane</h3>
@@ -141,7 +139,7 @@
       
       <div class="chat__line">
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar">
+          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar  avatar-left">
         </div>
         <div class="chat__line__bubbles">
           <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
@@ -154,7 +152,7 @@
           <div class="bubble owner-bubble">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
         </div>
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar">
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar avatar-right">
         </div>
       </div>
 
@@ -164,13 +162,13 @@
           <div class="bubble owner-bubble">Stet clita kasd gubergren.</div>
         </div>
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar">
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar avatar-right">
         </div>
       </div>
 
       <div class="chat__line">
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar">
+          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar avatar-left">
         </div>
         <div class="chat__line__bubbles">
           <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
