--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="contact-container clearfix selected">
         <a href="#" class="contact">
-            <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar avatar-left">
+            <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar float-left">
           <div class="contact__body">
             <h3 class="contact__name">Amy Adams</h3>
             <p class="contact__status">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</p>
@@ -47,7 +47,7 @@
       <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_02.png" alt="" class="avatar avatar-left">
+            <img src="assets/user_avatars/user_avatar_02.png" alt="" class="avatar float-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Marc</h3>
@@ -59,7 +59,7 @@
       <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_03.png" alt="" class="avatar avatar-left">
+            <img src="assets/user_avatars/user_avatar_03.png" alt="" class="avatar float-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Jacob</h3>
@@ -71,7 +71,7 @@
       <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_04.png" alt="" class="avatar avatar-left">
+            <img src="assets/user_avatars/user_avatar_04.png" alt="" class="avatar float-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Chris Smith</h3>
@@ -83,7 +83,7 @@
       <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_05.png" alt="" class="avatar avatar-left">
+            <img src="assets/user_avatars/user_avatar_05.png" alt="" class="avatar float-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Mia Wong</h3>
@@ -95,7 +95,7 @@
       <div class="contact-container clearfix">
         <a href="#" class="contact">
           <div class="contact__avatar">
-            <img src="assets/user_avatars/user_avatar_06.png" alt="" class="avatar avatar-left">
+            <img src="assets/user_avatars/user_avatar_06.png" alt="" class="avatar float-left">
           </div>
           <div class="contact__body">
             <h3 class="contact__name">Jane</h3>
@@ -137,9 +137,10 @@
 
     <section class="chat">
       
-      <div class="chat__line">
+      <div class="chat__line float-left">
+        <div class="timestamp">Amy, 11:37</div>
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar  avatar-left">
+          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar float-left">
         </div>
         <div class="chat__line__bubbles">
           <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
@@ -147,35 +148,38 @@
         </div>
       </div>
 
-      <div class="chat__line">
+      <div class="chat__line float-right">
+        <div class="timestamp float-right">11:40</div>
         <div class="chat__line__bubbles">
-          <div class="bubble owner-bubble">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+          <div class="bubble owner-bubble  float-right">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
         </div>
-        <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar avatar-right">
+        <div class="chat__line__avatar-container float-right">
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar float-right">
         </div>
       </div>
 
-      <div class="chat__line">
-        <div class="chat__line__bubbles">
-          <div class="bubble owner-bubble">At vero eos et accusam et justo duo dolores et ea rebum.</div>
-          <div class="bubble owner-bubble">Stet clita kasd gubergren.</div>
-        </div>
+      <div class="chat__line float-left">
+        <div class="timestamp">Amy, 12:04</div>
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar avatar-right">
-        </div>
-      </div>
-
-      <div class="chat__line">
-        <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar avatar-left">
+          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar float-left">
         </div>
         <div class="chat__line__bubbles">
           <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
         </div>
       </div>
 
-      <div class="typing">Amy is typing...</div>
+      <div class="chat__line float-right">
+        <div class="timestamp float-right">12:06</div>
+        <div class="chat__line__bubbles">
+          <div class="bubble owner-bubble  float-right">At vero eos et accusam et justo duo dolores et ea rebum.</div>
+          <div class="bubble owner-bubble float-right">Stet clita kasd gubergren.</div>
+        </div>
+        <div class="chat__line__avatar-container float-right">
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar float-right">
+        </div>
+      </div>
+
+      <div class="typing float-left">Amy is typing...</div>
 
     </section>
 
