--- a/index.html
+++ b/index.html
@@ -137,45 +137,53 @@
 
     <section class="chat">
       
-      <div class="chat__line float-left">
-        <div class="timestamp">Amy, 11:37</div>
+      <div class="chat__line flex-container flex-row">
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar float-left">
+          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar">
         </div>
-        <div class="chat__line__bubbles">
-          <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
-          <div class="bubble sender-bubble">At vero eos et accusam et justo duo dolores et ea rebum.</div>
-        </div>
-      </div>
-
-      <div class="chat__line float-right">
-        <div class="timestamp float-right">11:40</div>
-        <div class="chat__line__bubbles">
-          <div class="bubble owner-bubble  float-right">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="chat__line__avatar-container float-right">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar float-right">
+        <div class="chat__line__content">
+          <div class="timestamp">Amy, 11:37</div>
+          <div class="chat__line__bubbles">
+            <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
+            <div class="bubble sender-bubble">At vero eos et accusam et justo duo dolores et ea rebum.</div>
+          </div>
         </div>
       </div>
 
-      <div class="chat__line float-left">
-        <div class="timestamp">Amy, 12:04</div>
+      <div class="chat__line flex-container flex-row flex-reverse">
+        <div class="chat__line__content">
+          <div class="timestamp">11:40</div>
+          <div class="chat__line__bubbles">
+            <div class="bubble owner-bubble">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+          </div>
+        </div>
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar float-left">
-        </div>
-        <div class="chat__line__bubbles">
-          <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar">
         </div>
       </div>
 
-      <div class="chat__line float-right">
-        <div class="timestamp float-right">12:06</div>
-        <div class="chat__line__bubbles">
-          <div class="bubble owner-bubble  float-right">At vero eos et accusam et justo duo dolores et ea rebum.</div>
-          <div class="bubble owner-bubble float-right">Stet clita kasd gubergren.</div>
+      <div class="chat__line flex-container flex-row">
+        <div class="chat__line__avatar-container">
+          <img src="assets/user_avatars/user_avatar_01.png" alt="" class="avatar">
         </div>
-        <div class="chat__line__avatar-container float-right">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar float-right">
+        <div class="chat__line__content">
+          <div class="timestamp">Amy, 12:04</div>
+          <div class="chat__line__bubbles">
+            <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="chat__line flex-container flex-row flex-reverse">
+        <div class="chat__line__content">
+          <div class="timestamp">12:06</div>
+          <div class="chat__line__bubbles">
+            <div class="bubble owner-bubble">At vero eos et accusam et justo duo dolores et ea rebum.</div>
+            <div class="bubble owner-bubble">Stet clita kasd gubergren.</div>
+          </div>
+        </div>
+        <div class="chat__line__avatar-container">
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar">
         </div>
       </div>
 
