--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
         </div>
       </div>
 
-      <div class="chat__line flex-container flex-row flex-reverse">
+      <div class="chat__line flex-container flex-row flex-end">
         <div class="chat__line__content">
-          <div class="timestamp">11:40</div>
-          <div class="chat__line__bubbles">
+          <div class="timestamp text-right">11:40</div>
+          <div class="chat__line__bubbles flex-container flex-col flex-end">
             <div class="bubble owner-bubble">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
           </div>
         </div>
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar">
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar chat__avatar__self">
         </div>
       </div>
 
@@ -174,34 +174,30 @@
         </div>
       </div>
 
-      <div class="chat__line flex-container flex-row flex-reverse">
+      <div class="chat__line flex-container flex-row flex-end">
         <div class="chat__line__content">
-          <div class="timestamp">12:06</div>
-          <div class="chat__line__bubbles">
+          <div class="timestamp text-right">12:06</div>
+          <div class="chat__line__bubbles flex-container flex-col flex-end">
             <div class="bubble owner-bubble">At vero eos et accusam et justo duo dolores et ea rebum.</div>
             <div class="bubble owner-bubble">Stet clita kasd gubergren.</div>
           </div>
         </div>
         <div class="chat__line__avatar-container">
-          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar">
+          <img src="assets/user_avatars/user_avatar_07.png" alt="" class="avatar chat__avatar__self">
         </div>
       </div>
 
-      <div class="typing float-left">Amy is typing...</div>
+      <div class="chat__typing">Amy is typing...</div>
 
     </section>
 
     <section class="compose">
-      <div class="compose__box">
+      <form class="compose__box">
         <textarea name="message" id="message" cols="30" rows="10" class="compose__box__textarea" placeholder="Type your message ..."></textarea>
-      </div>
-      <div class="send-btn-container">
-        <a href="#" class="send-btn">
-          <div class="icon-container">
-            send icon
-          </div>
-        </a>
-      </div>
+        <a href="#" class="textarea-icon compose__box__attachment"><i class="fas fa-paperclip"></i></a>
+        <a href="#" class="textarea-icon compose__box__smile"><i class="far fa-smile"></i></a>
+        <button type="submit" class="compose__box__send"><i class="fas fa-paper-plane"></i></button>
+      </form>
     </section>
 
   </section>
