--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="chat__line__content">
           <div class="timestamp">Amy, 11:37</div>
-          <div class="chat__line__bubbles">
+          <div class="chat__line__bubbles flex-container flex-col flex-start">
             <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
             <div class="bubble sender-bubble">At vero eos et accusam et justo duo dolores et ea rebum.</div>
           </div>
@@ -168,7 +168,7 @@
         </div>
         <div class="chat__line__content">
           <div class="timestamp">Amy, 12:04</div>
-          <div class="chat__line__bubbles">
+          <div class="chat__line__bubbles flex-container flex-col flex-start">
             <div class="bubble sender-bubble">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</div>
           </div>
         </div>
