--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     <section class="compose">
       <form class="compose__box">
         <textarea name="message" id="message" cols="30" rows="10" class="compose__box__textarea" placeholder="Type your message ..."></textarea>
-        <a href="#" class="textarea-icon compose__box__attachment"><i class="fas fa-paperclip"></i></a>
-        <a href="#" class="textarea-icon compose__box__smile"><i class="far fa-smile"></i></a>
+        <a href="#" class="textarea-icon compose__box__attachment"><i class="icon fas fa-paperclip"></i></a>
+        <a href="#" class="textarea-icon compose__box__smile"><i class="icon far fa-smile"></i></a>
         <button type="submit" class="compose__box__send"><i class="fas fa-paper-plane"></i></button>
       </form>
     </section>
