--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <meta name="Chat app interface" content="description">
   <title>Chat app interface</title>
 
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/components.css">
-
+  <link rel="stylesheet" href="CSS/normalize.min.css">
+  <link rel="stylesheet" href="CSS/base.css">
+  <link rel="stylesheet" href="CSS/layout.css">
+  <link rel="stylesheet" href="CSS/components.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 
   <script src="https://kit.fontawesome.com/c300050d94.js" crossorigin="anonymous"></script>
